src/objects/TPA_Master_Extension_Information__c.object
<CustomObject>
    <description>TPA-MC-ESPSFDCTPA-396 TPA related fields in address object which gets updated during vendor submission need to move under this object</description>
    <fields>
        <fullName>Commercial_Reason__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TPA-MC-ESPSFDCTPA-396</description>
        <label>Vendor Ind. Competitive Prod/Serv.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DDN_Ack_Pending_Requests__c</fullName>
        <label>DDN Ack Pending Requests</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Hold_TPA_Requests__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-2102-On Hold TPA requests Numbers</description>
        <label>On Hold TPA Requests</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Destruction_Ack_Outstanding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return/Destruction Ack Outstanding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TPA_Accounts_Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TPA Accounts Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>TPA Master Extension Informations</relationshipLabel>
        <relationshipName>TPA_Master_Extension_Informations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>TPA Master Extension Information</label>
    <nameField>
        <displayFormat>TAE-{000000000}</displayFormat>
        <label>TPA Account Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TPA Master Extension Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>